[metadata]
name = ugy_webmin
version = attr: ugy_webmin.__init__.__version__
description = UrbanGirlYarns api
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
packages = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-restful
    flask-migrate
    flask-jwt-extended
    flask-marshmallow
    marshmallow-sqlalchemy
    python-dotenv
    passlib
    apispec[yaml]
    apispec-webframeworks
    gunicorn
    click

[options.packages.find] #optional
include=ugy_webmin

[options.entry_points]
console_scripts =
    ugy-conf = ugy_webmin.gunicorn_conf:main